Next Version

    [INTERNALS]
    - allow FCGI_SOCKET_PATH and FCGI_LISTEN_QUEUE ENV variables to be
      passed in as import settings, although favour ENV variables if set
    - delay creation of FCGI::Request until the first call to CGI::Fast->new
      (RT #70609), removing the need to defined these in a BEGIN block
    - add test to check ENV values are not recycled from old requests and not
      set as defaults when the FCGI_SOCKET_PATH is used (RT #65492)

    [DOCUMENTATION]
    - document above changes
    - general tidy up

Version 2.01 May 27, 2014

    [DOCUMENTATION]
    - update perldoc to list current bugtracker and maintainer
    - pod2readme the perldoc to replace content of README with something sane

Version 2.00 May 22, 2014

    [DOCUMENTATION]
    - Repointing bugtracker at newly forked github repo
    - Tickets migrated from RT to github issues (both CGI and CGI.pm distributions)
    - Bump version to 2.00 for clear boundary of above changes

For previous Changes please see CGI.pm prior to 3.65_01