@@ -7,6 +7,8 @@ Next Version
       (RT #70609), removing the need to defined these in a BEGIN block
     - add test to check ENV values are not recycled from old requests and not
       set as defaults when the FCGI_SOCKET_PATH is used (RT #65492)
+    - add file_handles method to allow setting of file handles to be passed
+      to FCGI (RT #94423)
 
     [DOCUMENTATION]
     - document above changes
